--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,12 +1,14 @@
 
-.container {
+/* .container {
   padding: 0 2rem;
-}
+} */
+
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
+  /* padding: 4rem 0; */
   flex: 1;
+  height:100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,7 +18,7 @@
 .footer {
   display: flex;
   flex: 1;
-  padding: 2rem 0;
+  /* padding: 2rem 0; */
   border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
